improved test