@@ -32,14 +32,18 @@ public class TheTest extends TestCase {
     }
 
     public void testKill() throws Exception {
-        Process p = Runtime.getRuntime().exec("notepad");
+        ProcessBuilder pb = new ProcessBuilder("notepad");
+        pb.environment().put("TEST","foobar");
+        Process p = pb.start();
         try {
             WinProcess wp = new WinProcess(p);
             System.out.println("pid="+wp.getPid());
             
             System.out.println(wp.getCommandLine());
             assertTrue(wp.getCommandLine().contains("notepad"));
+
             System.out.println(wp.getEnvironmentVariables());
+            assertEquals("foobar",wp.getEnvironmentVariables().get("TEST"));
 
             Thread.sleep(100);
             new WinProcess(p).killRecursively();
